fix(t3-chat): Poor contrast ratios on "New Model" popup

--- a/styles/t3-chat/catppuccin.user.less
+++ b/styles/t3-chat/catppuccin.user.less
@@ -119,9 +119,7 @@
     }
 
     .text-primary,
-    .text-pink-500,
     .text-blue-500,
-    .text-pink-400,
     .text-blue-400,
     .text-indigo-400 {
       color: @accent !important;
@@ -175,6 +173,11 @@
 
     h1.text-primary-foreground {
       color: @text !important;
+    }
+
+    /* Targets the "New Model" Popop */
+    .bg-pink-500\/10 > div > div > p {
+      color: @surface0 !important;
     }
 
     /* Tailwind Prose */
